Added user can update their username and email feature. (#19)
