# app/controllers/api/users_controller.rb
@@ -1,9 +1,10 @@
 module Api
   class UsersController < ApiController
     before_action :authenticate_user, only: %i[show update destroy]
+    before_action :valid_password?, only: :update
 
     def create
-      user = User.new(user_signup_params)
+      user = User.new(user_params)
       return render_error(user.errors.messages, :unprocessable_entity) \
         unless user.save
 
@@ -14,7 +15,12 @@ module Api
       render json: UserSerializer.new(current_user)
     end
 
-    def update; end
+    def update
+      return render_error(current_user.errors.messages, :unprocessable_entity) \
+        unless current_user.update(user_params.except(:password))
+
+      render json: UserSerializer.new(current_user)
+    end
 
     def destroy
       current_user.destroy
@@ -23,8 +29,13 @@ module Api
 
     private
 
-    def user_signup_params
+    def user_params
       params.require(:user).permit(:username, :email, :password)
+    end
+
+    def valid_password?
+      render_error('Invalid password', :bad_request) unless
+        current_user.authenticate(user_params[:password])
     end
   end
 end
